[package]
name = "pvss"
version = "0.2.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
description = "Publicly verifiable secret sharing implementations"
homepage = "https://github.com/vincenthz/rust-pvss"
repository = "https://github.com/vincenthz/rust-pvss"
license = "MIT"
keywords = [ "Crypto", "Cryptography", "Secret", "Sharing" ]
categories = [ "cryptography" ]
edition = "2024"

[lib]
name = "pvss"

[dependencies]
openssl = { version = "0.10", optional = true }
eccoxide = { version = "0.3", optional = true }
cryptoxide = { version = "0.5", optional = true }
getrandom = { version = "0.2", optional = true }

[features]
default = ["eccoxide"]
openssl = ["dep:openssl"]
eccoxide = ["dep:eccoxide", "dep:cryptoxide", "dep:getrandom"]
