[package]
name = "pvss"
version = "0.3.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
description = "Publicly verifiable secret sharing implementations"
homepage = "https://github.com/vincenthz/rust-pvss"
repository = "https://github.com/vincenthz/rust-pvss"
license = "MIT"
keywords = [ "Crypto", "Cryptography", "Secret", "Sharing" ]
categories = [ "cryptography" ]
edition = "2024"

[lib]
name = "pvss"

[dependencies]
eccoxide = { version = "0.4" }
cryptoxide = { version = "0.5" }
getrandom = { version = "0.4" }

[features]
default = []
